<?xml version="1.0" encoding="utf-8"?>
<com.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_my_userIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:padding="@dimen/divider"
                fresco:roundAsCircle="true"
                fresco:viewAspectRatio="1" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_my_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/my_sign_in"
            android:textColor="@color/text_selected"
            android:textSize="@dimen/text_title_size" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/text_title_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/md_grey_900"
            android:padding="@dimen/divider" />

        <TextView
            android:id="@+id/tv_my_collect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/divider"
            android:layout_marginTop="@dimen/divider"
            android:gravity="center"
            android:padding="@dimen/divider"
            android:text="@string/my_collect"
            android:textColor="@color/text_selected"
            android:textSize="@dimen/text_title_middle_size" />

        <TextView
            android:id="@+id/tv_my_clearCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/divider"
            android:layout_marginTop="@dimen/divider"
            android:gravity="center"
            android:padding="@dimen/divider"
            android:text="@string/my_clear_cache"
            android:textColor="@color/text_selected"
            android:textSize="@dimen/text_title_middle_size" />

        <TextView
            android:id="@+id/tv_my_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/divider"
            android:layout_marginTop="@dimen/divider"
            android:gravity="center"
            android:padding="@dimen/divider"
            android:text="@string/my_about"
            android:textColor="@color/text_selected"
            android:textSize="@dimen/text_title_middle_size" />

        <TextView
            android:id="@+id/tv_my_signOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/divider"
            android:layout_marginTop="@dimen/divider"
            android:gravity="center"
            android:padding="@dimen/divider"
            android:text="@string/my_sign_out"
            android:textColor="@color/text_selected"
            android:textSize="@dimen/text_title_middle_size" />

    </LinearLayout>
</com.widget.BounceScrollView>