<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/v_appbar"
        layout="@layout/layout_appbar" />

    <FrameLayout
        android:id="@+id/v_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height"
        android:layout_gravity="bottom"
        android:background="@color/md_white_1000"
        android:orientation="horizontal"
        app:layout_behavior="@string/bye_burger_bottom_behavior">

        <LinearLayout
            android:id="@+id/v_tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bg_tab_home_selector" />

            <TextView
                android:id="@+id/tv_tab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_home"
                android:textColor="@color/text_selected"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_tab_recommend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tab_recommend"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bg_tab_recommend_selector" />

            <TextView
                android:id="@+id/tv_tab_recommend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_recommend"
                android:textColor="@color/text_selected"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_tab_find"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tab_find"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bg_tab_find_selector" />

            <TextView
                android:id="@+id/tv_tab_find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_find"
                android:textColor="@color/text_selected"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_tab_my"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_tab_my"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/bg_tab_my_selector" />

            <TextView
                android:id="@+id/tv_tab_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab_my"
                android:textColor="@color/text_selected"
                android:textSize="@dimen/text_title_size" />

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
