<?xml version="1.0" encoding="utf-8"?>

<com.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/v_login_visitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/text_title_size">

            <ImageView
                android:id="@+id/iv_login_visitor"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_visitor_selector" />

            <TextView
                android:id="@+id/tv_login_visitor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_visitor"
                android:textColor="@color/md_grey_800"
                android:textSize="@dimen/text_title_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@drawable/bg_empty_grey" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/v_login_wechat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/text_title_size">

            <ImageView
                android:id="@+id/iv_login_wechat"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_wechat_selector" />

            <TextView
                android:id="@+id/tv_login_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_wechat"
                android:textColor="@color/md_grey_800"
                android:textSize="@dimen/text_title_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/v_login_weibo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/text_title_size">

            <ImageView
                android:id="@+id/iv_login_weibo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_weibo_selector" />

            <TextView
                android:id="@+id/tv_login_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_weibo"
                android:textColor="@color/md_grey_800"
                android:textSize="@dimen/text_title_size" />
        </LinearLayout>
    </LinearLayout>
</com.widget.BounceScrollView>